[gd_scene load_steps=11 format=3 uid="uid://dpmkp58gkiwhu"]

[ext_resource type="Script" path="res://Tool_MainScene/scripts/MainMenu.gd" id="1_52lvt"]
[ext_resource type="PackedScene" uid="uid://xyf5kleke3vc" path="res://Tool_MainScene/scenes/ActiveButton.tscn" id="2_58c6u"]
[ext_resource type="Texture2D" uid="uid://cxjxms7hx5xm7" path="res://Assets/bg1.jpg" id="2_ktvxo"]
[ext_resource type="Texture2D" uid="uid://cv51mw4s8wwcf" path="res://Tool_MainScene/Imgs/fog2.png" id="4_3r8ci"]
[ext_resource type="FontFile" uid="uid://ban5vw8iybm4p" path="res://Assets/FONT/VonwaonBitmap-16px.ttf" id="4_flo3c"]
[ext_resource type="AudioStream" uid="uid://bger8i8kdxaqy" path="res://Tool_MainScene/Audios/BG_GG-Pizz.mp3" id="5_57brv"]

[sub_resource type="Animation" id="Animation_1nv33"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_efwtn"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sgmx7"]
_data = {
"RESET": SubResource("Animation_1nv33"),
"idle": SubResource("Animation_efwtn")
}

[sub_resource type="Gradient" id="Gradient_ake8q"]
interpolation_mode = 2
colors = PackedColorArray(0.622192, 0.852287, 0.996655, 1, 1, 1, 1, 0)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_52lvt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect_BG" type="TextureRect" parent="CanvasLayer/UI"]
self_modulate = Color(1, 1, 1, 0.623529)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ktvxo")

[node name="TR_MainTitle" type="TextureRect" parent="CanvasLayer/UI"]
custom_minimum_size = Vector2(1200, 300)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -924.0
offset_top = 36.0
offset_right = 276.0
offset_bottom = 336.0
grow_horizontal = 2
pivot_offset = Vector2(600, 150)
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/UI/TR_MainTitle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -18.0
offset_right = 220.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.192157, 0.0627451, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0.654902, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.756863, 0, 1)
theme_override_fonts/font = ExtResource("4_flo3c")
theme_override_font_sizes/font_size = 160
text = "嘴炮男神"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/UI/TR_MainTitle"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_sgmx7")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="CanvasLayer/UI"]
process_mode = 1
position = Vector2(-314, 965)
amount = 20
lifetime = 16.0
preprocess = 100.0
fixed_fps = 30
texture = ExtResource("4_3r8ci")
emission_shape = 2
emission_sphere_radius = 128.0
spread = 39.74
gravity = Vector2(30, 5)
initial_velocity_min = 36.06
initial_velocity_max = 88.52
angular_velocity_min = -63.86
angular_velocity_max = 53.11
damping_max = 11.45
scale_amount_min = 6.0
scale_amount_max = 9.0
color_ramp = SubResource("Gradient_ake8q")

[node name="Vbox_Buttons" type="VBoxContainer" parent="CanvasLayer/UI"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -812.0
offset_top = -104.0
offset_right = -312.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" parent="CanvasLayer/UI/Vbox_Buttons" instance=ExtResource("2_58c6u")]
layout_mode = 2
text = "开始游戏"

[node name="Button3" parent="CanvasLayer/UI/Vbox_Buttons" instance=ExtResource("2_58c6u")]
layout_mode = 2
text = " 挖煤医生@bilibili"

[node name="Button4" parent="CanvasLayer/UI/Vbox_Buttons" instance=ExtResource("2_58c6u")]
layout_mode = 2
text = "结束游戏"

[node name="Label_Version" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Ver 0.1 "

[node name="Audio_BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_57brv")
autoplay = true

[connection signal="pressed" from="CanvasLayer/UI/Vbox_Buttons/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Vbox_Buttons/Button4" to="." method="_on_button_4_pressed"]
[connection signal="finished" from="Audio_BGM" to="." method="_on_audio_bgm_finished"]
